fix image_size max-width 180% and text-align center erase tablet

--- a/app/assets/stylesheets/home.scss
+++ b/app/assets/stylesheets/home.scss
@@ -21,17 +21,8 @@
     .jumbotron.jumbotron-fluid {
         margin: 15px;
         img {
-            max-width: 150%;
+            max-width: 180%;
             height: auto;
-        }
-        .container-fluid.my_prodece {
-            text-align: center;
-        }
-        .container-fluid.soccer {
-            text-align: center;
-        }
-        .container-fluid.yugioh {
-            text-align: center;
         }
     }
 }
